UPDATE: Fixed further alignment and color issues on the homepage // Added Card details

--- a/style/main.scss
+++ b/style/main.scss
@@ -27,6 +27,7 @@ $boxshadowColor: #0000001a;
     align-items: center;
     flex-direction: $direction;
 }
+
 /**Create new "flex" mixin without "align-items: center" (what to name it?)**/
 @mixin padding() {
     padding: 15px;
@@ -49,13 +50,24 @@ $boxshadowColor: #0000001a;
     line-height: normal;
 }
 
+@mixin imgWidth {
+    width: 100%
+}
+
 .main-container {
     max-width: 100%;
     text-decoration: none;
 }
 
+.header-container {
+    @include flexCenter(column);
+}
+
 .body-container {
     background-color: $bgSection;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 
     &__heading {
         @include header-2;
@@ -131,8 +143,6 @@ $boxshadowColor: #0000001a;
     }
 }
 
-/**Why is hero-title__txt using hero-title styling?**/
-
 .button {
     border: none;
     background-color: transparent;
@@ -169,6 +179,19 @@ $boxshadowColor: #0000001a;
         @include flexCenter();
     }
 
+    &__menu {
+        width: 323px;
+        height: 69px;
+        gap: 20px;
+        border-radius: 20px;
+        margin-bottom: 15px;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        flex-direction: row;
+        background-color: $bgSection;
+        box-shadow: 0px 4px 10px 0px $boxshadowColor;
+    }
 }
 
 .card {
@@ -178,23 +201,41 @@ $boxshadowColor: #0000001a;
     border-radius: 15px;
     overflow: hidden;
     box-shadow: 0px 4px 15px 0px $boxshadowColor;
+    position: relative;
 
-    &--title {
+    &__title {
         color: #000;
         font-family: Roboto;
         font-size: 18px;
         font-style: normal;
         font-weight: 700;
         line-height: normal;
+        display: flex;
+        justify-content: space-between;
     }
 
-    &--txt {
+    &__txt {
         color: #000;
         font-family: Roboto;
         font-size: 17px;
         font-style: normal;
         font-weight: 300;
         line-height: normal;
+        width: 94%;
+    }
+
+    & img {
+        width: 100%;
+        height: 75%;
+    }
+
+    & p {
+        width: 100%;
+        margin: 0;
+    }
+
+    & h3 {
+        margin: 0;
     }
 }
 
@@ -204,11 +245,14 @@ $boxshadowColor: #0000001a;
     text-align: center;
     @include robotoS14;
     color: var(--Green-Font, $badgefontColor);
+    position: absolute;
+    top: 10px;
+    right: 10px;
 
     &__bg {
         border-radius: 2px;
         background-color: $badgebgColor;
-        box-shadow: 0px 2px 4px 0px $boxshadowColor; 
+        box-shadow: 0px 2px 4px 0px $boxshadowColor;
     }
 }
 
@@ -227,5 +271,9 @@ $boxshadowColor: #0000001a;
         font-weight: 400;
         line-height: normal;
         margin-bottom: 16px;
+    }
+
+    &__fa {
+        color: white;
     }
 }
